# qwen3-tts.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  optimization.md  streaming_design.md
src/: audio_codec_encoder.cpp  audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  gguf_loader.cpp  gguf_loader.h  main.cpp  qwen3_tts.cpp  qwen3_tts.h  server.cpp  test_worker_ipc.cpp  tokenizer_unicode.cpp  tts_transformer.cpp  tts_transformer.h  worker_ipc.cpp  worker_ipc.h  worker_session.cpp  worker_session.h
src/cuda/: qwen3_megakernel.cu  qwen3_megakernel.cuh  qwen3_megakernel.h
src/qwen3_fa/: audio_tower.cpp  crisp_audio.h  qwen3_asr.cpp  qwen3_asr.h
src/qwen3_fa/core/: gguf_loader.cpp  gguf_loader.h
tests/: test_codebook.cpp  test_streaming_parity.cpp
tools/: .gitignore  grid_sync_bench.cu  mmvq_int8_bench.cu
